--- a/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
+++ b/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
@@ -11,4 +11,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
