--- a/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
+++ b/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
@@ -12,6 +12,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenFTTH.Core.Address" Version="0.9.0" />
+    <PackageReference Include="OpenFTTH.EventSourcing" Version="2.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
