--- a/src/OpenFTTH.AddressPostgisProjector/appsettings_copy.json
+++ b/src/OpenFTTH.AddressPostgisProjector/appsettings_copy.json
@@ -1,1 +1,5 @@
-{}
+{
+  "settings": {
+    "eventStoreConnectionString": "Server=127.0.0.1;Port=5432;Database=EVENT_STORE;User Id=postgres;Password=postgres;"
+  }
+}
