add postgis connectionstring to settings

--- a/src/OpenFTTH.AddressPostgisProjector/appsettings_copy.json
+++ b/src/OpenFTTH.AddressPostgisProjector/appsettings_copy.json
@@ -1,5 +1,6 @@
 {
   "settings": {
-    "eventStoreConnectionString": "Server=127.0.0.1;Port=5432;Database=EVENT_STORE;User Id=postgres;Password=postgres;"
+    "eventStoreConnectionString": "Server=127.0.0.1;Port=5432;Database=EVENT_STORE;User Id=postgres;Password=postgres;",
+    "postgisConnectionString": "Server=127.0.0.1;Port=5432;Database=OPEN_FTTH;User Id=postgres;Password=postgres;"
   }
 }
