--- a/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
+++ b/src/OpenFTTH.AddressPostgisProjector/OpenFTTH.AddressPostgisProjector.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="npgsql" Version="5.0.10" />
     <PackageReference Include="OpenFTTH.Core.Address" Version="0.9.0" />
     <PackageReference Include="OpenFTTH.EventSourcing" Version="2.7.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
@@ -26,6 +27,7 @@
 
   <ItemGroup>
     <None Update="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Sql/location_schema.sql" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
