--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,12 +122,12 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
-      - update-helm-chart:
-          context: docker
-          requires:
-           - docker-publish-image
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
+      # - update-helm-chart:
+      #     context: docker
+      #     requires:
+      #      - docker-publish-image
+      #     filters:
+      #       tags:
+      #         only: /^v.*/
+      #       branches:
+      #         ignore: /.*/
