switch to dax-bot user key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ executors:
       GIT_USER_NAME: "dax-bot"
       GIT_USER_EMAIL: "admin@dax.dk"
       GIT_CLONE_REPO: "git@github.com:DAXGRID/dax-charts.git"
-      SSH_FINGERPRINT: "34:2b:43:c1:07:25:c9:38:63:0d:9a:e2:ea:ab:0c:f1"
+      SSH_FINGERPRINT: "4c:fc:8a:32:9c:8c:fc:80:dc:e0:ae:bb:a1:8c:c5:4f"
     docker:
     - image: alpine/git
 
